--- a/_posts/git版本控制工具/2018-06-04-git实用操作指令.md
+++ b/_posts/git版本控制工具/2018-06-04-git实用操作指令.md
@@ -5,64 +5,109 @@ categories: Blog
 description: 总结一些git的实用操作
 keywords: Blog, Git
 ---
-本文为个人结合实际项目开发经验来做的git常用操作总结总结，如果想系统地学习git操作，
-请移步http://iissnan.com/progit/
+##git版本控制工具实用操作指令
+#####本文为个人结合实际项目开发经验来做的git常用操作总结总结，
+#####如果想系统地学习git操作，请移步[Pro Git 简体中文版](http://iissnan.com/progit/)
 
-1，先贴一个日常应用情景：
-在万事俱备，git已经正常关联相关远程仓库时，常用的操作指令为：
-git add .
-git commit -m "备注"
-git pull
-git push
+###1，先贴一个日常应用情景：
+在万事俱备，git已经正常关联相关远程仓库时，
+最常用的操作指令为：
 
-请注意，是先commit,再pull。 当然你也可以先pull,不过那样的话，有时候Git会莫名其妙的进入编辑模式
+        git add .
+        git commit -m "备注"
+        git pull
+        git push
+
+*请注意，是先commit,再pull。*
+当然你也可以先pull,不过那样的话，有时候Git会莫名其妙的进入编辑模式
 （git bash操作界面突然大变样，怎么全是蓝色的字和英文，甚至还有乱码...我的操作栏呢？喵喵喵？？？）
-备注：如果由于各种原因进入了“编辑模式”，想要退出的操作为：
-1,按下esc键 . （esc的目的是退出编辑模式）
-2,按两个大写的z(可以按CapsLk，再按两个ZZ或者直接shfit+ZZ)
-这样就可以退出编辑模式啦，
-ps:退出编辑模式本身不会造成任何额外影响，但是git会恢复之前的操作，比如你之前在Pull代码，突然进入编辑模式了，
-退出编辑模式之后，就会默认强制pull，本地与远程分支的代码在这种情况下，是有辣么一点点可能冲突的哦，
-要注意看git有没有给出conflict提示。
+
+**备注**：
+如果由于各种原因进入了“编辑模式”，想要退出此模式的操作步骤为：
+
+* 1,按下esc键 . （esc的目的是退出编辑模式）
+* 2,按两个大写的z(可以按CapsLk，再按两个ZZ或者直接shfit+ZZ)
+*这样就可以退出编辑模式啦*
+**ps：**退出编辑模式本身不会造成任何额外影响，但是git会在恢复之前的操作时对代码造成影响
+比如你之前在Pull代码，突然进入编辑模式了。在退出编辑模式之后，就会默认强制pull，本地与远程分支的代码在这种情况下，是有可能在部分文件内发生冲突的
+*具体则要注意git有没有给出conflict提示。*
 
 
-2，不管是pull还是push,都无法成功，git只是提示有代码将会被冲突所以不允许你的操作
-情景二：码代码正欢，没有commit,直接pull代码，git提示有冲突，
-然后你就会发现一件非常可怕的事：
-既不能pull，也不能再commit之后再push或者pull，连冲突文件都没有！连解决conflict的机会都不给我！！
+###2，在某一次日常pull代码后，不管是pull还是push,都无法成功进行
+**情景二：**码代码正欢时，*没有commit,直接pull代码了*，
+git提示文件冲突，然后你就会发现一件非常可怕的事：
+
+* 既不能pull，也不能再commit之后再push或者pull，连冲突文件都没有！连解决conflict的机会都不给我！！
 只有git面无表情的提示：因为冲突，所以这也不能，那也不能.......mmp~~~这个情况憋死了多少刚接触git不久的骚年有木有~~
 为那些曾经偷偷把本地代码删掉重新git clone，或者换个新文件夹clone，最后对着clone后的代码，把自己的修改慢慢加上去的吃苦耐劳行为默哀三秒钟~
 
-解决方案：
-git stash       //将本次的修改暂时保存起来,此操作后的代码，就是你最近一次commit的代码了
-git pull           //pull线上最新代码
-git stash pop stash@{0}     //将刚刚保存起来的“修改”还原，此时有冲突就解决冲突，没冲突则万事大吉~~
+**解决方案：**
+
+        git stash       //将本次的修改暂时保存起来,此操作后的代码，就是你最近一次commit的代码了
+        git pull           //pull线上最新代码
+        git stash pop stash@{0}     //将刚刚保存起来的“修改”还原，此时有冲突就解决冲突，没冲突则万事大吉~~
 ...
 
 
-3,代码提交后发现错误，需要紧急回退。
-情形三：已经commit结束了，也push到远程了。然后发现.....NM这个commit有问题！想要回到上一次commit的状态！
-解决方案：
-git reset --hard HEAD^   //将本地的文件回退为上一次commit时的状态
-git push origin master -f  //将本地的代码强制push到远程
-然后有人就会发现....git push origin master -f 这一步无法完成，git提示没有权限。因为需要管理员权限才能执行这一步操作。
-ps：回退类似的操作还有：
-git reset --hard 156cd50a   //回退到指定版本，156cd50a 这个就是commit记录是生成的唯一标识了。
-（156cd50a  这种唯一标识可以在git上直接找到，也可以用指令
-git log 查看commit详细信息，
-git log --pretty=oneline --abbrev-commit   //查看版本号和commit时的注释 ）
+###3,代码提交后发现错误，需要紧急回退。
+**情形三：**已经commit结束了，也push到远程了。然后发现.....这此的commit修改有严重问题，一时半会儿又找不出原因！*想要回到上一次commit的状态怎么办！*
+**解决方案：**
+
+        git reset --hard HEAD^   //将本地的文件回退为上一次commit时的状态
+        git push origin master -f  //将本地的代码强制push到远程。这一步需要管理员权限才能执行！~
+
+**ps**：回退类似的操作还有：
+
+        git reset --hard 156cd50a   //回退到指定版本，156cd50a 这个就是commit记录是生成的唯一标识了。
+        git log 查看commit详细信息，
+        git log --pretty=oneline --abbrev-commit   //查看版本号和commit时的注释 ）
 
 
-4，分支管理
-查看本地分支：git branch
+###4，分支管理
+#####（默认在master分支上）新建分支
 
-5，打标签 tag
-首先明确一个概念：便签(tag)是给commit记录打的。
-就是说，标签只是把那些（你认为）比较特别的commit记录标记出来了，并且添加了对于commit的标记，使其更利于查找。
-git tag -a v3.0.0 -m "Release version 0.1.3"    //对最近一次的commit新加标签：
-git push origin --tags     //将本地的所有标签提交到远程
+    查看本地分支：git branch
+    新建本地分支：git branch dev   //dev为分支名
+    切换到dev分支：git checkout dev
+    本地新建分支并同时切换到此分支：git checkout -b dev
 
-其他实用操作：
-查看本地的tag标签：git  tag
-给指定commit添加标签:git tag v3.0.0  6224937
-推送指定标签到远程：git push origin v3.0.0
+#####（在dev分支上）将新分支推送到远程
+-------------
+将分支(dev)push到远程仓库，并同时建立远程分支关联：git push --set-upstream origin dev
+【远程分支关联：是如果在本地分支下操作： git pull, git push ，不需要指定在命令行指定远程的分支。】．
+
+（在clone公共项目后，本地只有master分支时）新建并同步远程新分支
+本地新建一个dev分支来同步远程dev分支：git checkout -b dev origin/dev
+
+#####（在master分支上）合并分支
+----------
+**这里只介绍三种方式**
+
+        git merge dev       //这样合并会在master分支上保留dev分支上，从上一次合并到目前为止所有的commit记录
+        或git merge --no-ff  //快进式合并,好处就是不用add all 再commit信息了，会直接进入编辑模式添加备注，然后直接push
+        或git merge --squash dev  //压缩式合并。
+** ps**:个人最喜用的就是压缩式合并，
+好处就是在push到master分支上时，只有一条commit记录。
+因为在开发一款新产品或者新功能时， 周期可能会很长，你会在本地每完成一个小功能或者修改就会commit一次(方便出问题时及时回退)，你的大多数commit记录都是毫无意义的，*此时你根本不希望将这些大量的无意义的commit记录全标记到master分支上去*，最好master分支上只有一条记录，标志着我将此功能合并过来了。
+
+#####(在其他分支上)
+------------------
+
+        删除本地分支：git branch -d branch-name
+        删除远程分支：git branch -r -d origin/branch-name
+
+
+####5，打标签 tag
+**首先明确一个概念:**便签(tag)是针对commit记录打的。
+就是说，打标签只是把那些（你认为）比较特别的commit记录标记出来了，并且添加了对于commit的标记，使其更利于查找。
+
+        git tag -a v3.0.0 -m "Release version 0.1.3"    //对最近一次的commit新加标签：
+        git push origin --tags     //将本地的所有标签提交到远程
+
+####其他实用操作：
+
+        查看本地的tag标签：git  tag
+        给指定commit添加标签:git tag v3.0.0  6224937
+        推送指定标签到远程：git push origin v3.0.
+
+
