--- a/_posts/git/2018-06-04-git实用操作指令.md
+++ b/_posts/git/2018-06-04-git实用操作指令.md
@@ -5,11 +5,13 @@ categories: Blog
 description: 总结一些git的实用操作
 keywords: Blog, Git
 ---
-##git版本控制工具实用操作指令
-#####本文为个人结合实际项目开发经验来做的git常用操作总结总结，
-#####如果想系统地学习git操作，请移步[Pro Git 简体中文版](http://iissnan.com/progit/)
+git版本控制工具实用操作指令
+本文为个人结合实际项目开发经验来做的git常用操作总结总结
+==============
+如果想系统地学习git操作，请移步[Pro Git 简体中文版](http://iissnan.com/progit/)
 
-###1，先贴一个日常应用情景：
+1，最常用的操作指令：
+--------------
 在万事俱备，git已经正常关联相关远程仓库时，
 最常用的操作指令为：
 
@@ -33,8 +35,9 @@ keywords: Blog, Git
 *具体则要注意git有没有给出conflict提示。*
 
 
-###2，在某一次日常pull代码后，不管是pull还是push,都无法成功进行
-**情景二：**码代码正欢时，*没有commit,直接pull代码了*，
+2，在某一次日常pull代码后，不管是pull还是push,都无法成功进行
+--------------
+**情景二：**码代码正欢时，*没有commit,直接pull代码了*
 git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 * 既不能pull，也不能再commit之后再push或者pull，连冲突文件都没有！连解决conflict的机会都不给我！！
@@ -49,7 +52,8 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 ...
 
 
-###3,代码提交后发现错误，需要紧急回退。
+3,代码提交后发现错误，需要紧急回退。
+--------------
 **情形三：**已经commit结束了，也push到远程了。然后发现.....这此的commit修改有严重问题，一时半会儿又找不出原因！*想要回到上一次commit的状态怎么办！*
 **解决方案：**
 
@@ -63,24 +67,24 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
         git log --pretty=oneline --abbrev-commit   //查看版本号和commit时的注释 ）
 
 
-###4，分支管理
-#####（默认在master分支上）新建分支
+4，分支管理
+--------------
+（默认在master分支上）新建分支
 
     查看本地分支：git branch
     新建本地分支：git branch dev   //dev为分支名
     切换到dev分支：git checkout dev
     本地新建分支并同时切换到此分支：git checkout -b dev
 
-#####（在dev分支上）将新分支推送到远程
--------------
+（在dev分支上）将新分支推送到远程
+
 将分支(dev)push到远程仓库，并同时建立远程分支关联：git push --set-upstream origin dev
 【远程分支关联：是如果在本地分支下操作： git pull, git push ，不需要指定在命令行指定远程的分支。】．
 
 （在clone公共项目后，本地只有master分支时）新建并同步远程新分支
 本地新建一个dev分支来同步远程dev分支：git checkout -b dev origin/dev
 
-#####（在master分支上）合并分支
-----------
+（在master分支上）合并分支
 **这里只介绍三种方式**
 
         git merge dev       //这样合并会在master分支上保留dev分支上，从上一次合并到目前为止所有的commit记录
@@ -97,14 +101,15 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
         删除远程分支：git branch -r -d origin/branch-name
 
 
-####5，打标签 tag
+5，打标签 tag
+--------------
 **首先明确一个概念:**便签(tag)是针对commit记录打的。
 就是说，打标签只是把那些（你认为）比较特别的commit记录标记出来了，并且添加了对于commit的标记，使其更利于查找。
 
         git tag -a v3.0.0 -m "Release version 0.1.3"    //对最近一次的commit新加标签：
         git push origin --tags     //将本地的所有标签提交到远程
 
-####其他实用操作：
+其他实用操作：
 
         查看本地的tag标签：git  tag
         给指定commit添加标签:git tag v3.0.0  6224937
