--- a/_posts/git/2018-06-04-git.md
+++ b/_posts/git/2018-06-04-git.md
@@ -6,8 +6,8 @@ description: 总结一些git的实用操作
 keywords: Blog, Git
 ---
 git版本控制工具实用操作指令
-本文为个人结合实际项目开发经验来做的git常用操作总结总结
-==============
+============   
+本文为个人结合实际项目开发经验来做的git常用操作总结总结       
 如果想系统地学习git操作，请移步[Pro Git 简体中文版](http://iissnan.com/progit/)
 
 1，最常用的操作指令：
@@ -37,7 +37,8 @@ git版本控制工具实用操作指令
 
 2，在某一次日常pull代码后，不管是pull还是push,都无法成功进行
 --------------
-**情景二：**码代码正欢时，*没有commit,直接pull代码了*
+**情景二：**        
+码代码正欢时，*没有commit,直接pull代码了*
 git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 * 既不能pull，也不能再commit之后再push或者pull，连冲突文件都没有！连解决conflict的机会都不给我！！
@@ -54,7 +55,8 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 3,代码提交后发现错误，需要紧急回退。
 --------------
-**情形三：**已经commit结束了，也push到远程了。然后发现.....这此的commit修改有严重问题，一时半会儿又找不出原因！*想要回到上一次commit的状态怎么办！*
+**情形三：**        
+已经commit结束了，也push到远程了。然后发现.....这此的commit修改有严重问题，一时半会儿又找不出原因！*想要回到上一次commit的状态怎么办！*
 **解决方案：**
 
         git reset --hard HEAD^   //将本地的文件回退为上一次commit时的状态
@@ -69,14 +71,14 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 4，分支管理
 --------------
-（默认在master分支上）新建分支
+* （默认在master分支上）新建分支
 
     查看本地分支：git branch
     新建本地分支：git branch dev   //dev为分支名
     切换到dev分支：git checkout dev
     本地新建分支并同时切换到此分支：git checkout -b dev
 
-（在dev分支上）将新分支推送到远程
+* （在dev分支上）将新分支推送到远程
 
 将分支(dev)push到远程仓库，并同时建立远程分支关联：git push --set-upstream origin dev
 【远程分支关联：是如果在本地分支下操作： git pull, git push ，不需要指定在命令行指定远程的分支。】．
@@ -84,7 +86,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 （在clone公共项目后，本地只有master分支时）新建并同步远程新分支
 本地新建一个dev分支来同步远程dev分支：git checkout -b dev origin/dev
 
-（在master分支上）合并分支
+* （在master分支上）合并分支
 **这里只介绍三种方式**
 
         git merge dev       //这样合并会在master分支上保留dev分支上，从上一次合并到目前为止所有的commit记录
@@ -94,8 +96,8 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 好处就是在push到master分支上时，只有一条commit记录。
 因为在开发一款新产品或者新功能时， 周期可能会很长，你会在本地每完成一个小功能或者修改就会commit一次(方便出问题时及时回退)，你的大多数commit记录都是毫无意义的，*此时你根本不希望将这些大量的无意义的commit记录全标记到master分支上去*，最好master分支上只有一条记录，标志着我将此功能合并过来了。
 
-#####(在其他分支上)
-------------------
+* (在其他分支上)      
+*不是要删除的目标分支即可*
 
         删除本地分支：git branch -d branch-name
         删除远程分支：git branch -r -d origin/branch-name
