--- a/_posts/git/2018-06-04-git.md
+++ b/_posts/git/2018-06-04-git.md
@@ -42,21 +42,20 @@ git版本控制工具实用操作指令
 git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 * 既不能pull，也不能再commit之后再push或者pull，连冲突文件都没有！连解决conflict的机会都不给我！！
-只有git面无表情的提示：因为冲突，所以这也不能，那也不能.......mmp~~~这个情况憋死了多少刚接触git不久的骚年有木有~~
-为那些曾经偷偷把本地代码删掉重新git clone，或者换个新文件夹clone，最后对着clone后的代码，把自己的修改慢慢加上去的吃苦耐劳行为默哀三秒钟~
+只有git面无表情的提示：因为冲突，所以这也不能，那也不能......这个情况憋死了多少刚接触git不久的骚年有木有~~    
 
 **解决方案：**
 
         git stash       //将本次的修改暂时保存起来,此操作后的代码，就是你最近一次commit的代码了
         git pull           //pull线上最新代码
-        git stash pop stash@{0}     //将刚刚保存起来的“修改”还原，此时有冲突就解决冲突，没冲突则万事大吉~~
+        git stash pop stash@{0}     //将刚刚保存起来的“修改”还原，此时有冲突就解决冲突
 ...
 
 
 3,代码提交后发现错误，需要紧急回退。
 --------------
 **情形三：**        
-已经commit结束了，也push到远程了。然后发现.....这此的commit修改有严重问题，一时半会儿又找不出原因！*想要回到上一次commit的状态怎么办！*
+已经commit结束了，也push到远程了。然后发现.....这此的commit修改有严重问题，一时半会儿又找不出原因！*想要回到上一次commit的状态怎么办！*      
 **解决方案：**
 
         git reset --hard HEAD^   //将本地的文件回退为上一次commit时的状态
