--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -35,7 +35,7 @@ git版本控制工具实用操作指令
 *具体则要注意git有没有给出conflict提示。*
 
 
-2，在某一次日常pull代码后，不管是pull还是push,都无法成功进行
+2，不管是pull还是push,都无法成功进行
 --------------
 **情景二：**        
 码代码正欢时，*没有commit,直接pull代码了*
