--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -79,11 +79,12 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 * （在dev分支上）将新分支推送到远程
 
-将分支(dev)push到远程仓库，并同时建立远程分支关联：git push --set-upstream origin dev
-【远程分支关联：是如果在本地分支下操作： git pull, git push ，不需要指定在命令行指定远程的分支。】．
+        将分支(dev)push到远程仓库，并同时建立远程分支关联：git push --set-upstream origin dev
+        【远程分支关联：是如果在本地分支下操作： git pull, git push ，不需要指定在命令行指定远程的分支。】．
 
-（在clone公共项目后，本地只有master分支时）新建并同步远程新分支
-本地新建一个dev分支来同步远程dev分支：git checkout -b dev origin/dev
+* （在clone公共项目后，本地只有master分支时）新建并同步远程新分支     
+
+        本地新建一个dev分支来同步远程dev分支：git checkout -b dev origin/dev
 
 * （在master分支上）合并分支
 **这里只介绍三种方式**
