--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -86,7 +86,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 
         本地新建一个dev分支来同步远程dev分支：git checkout -b dev origin/dev
 
-* （在master分支上）合并分支
+* （在master分支上）合并分支      
 **这里只介绍三种方式**
 
         git merge dev       //这样合并会在master分支上保留dev分支上，从上一次合并到目前为止所有的commit记录
@@ -97,7 +97,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 因为在开发一款新产品或者新功能时， 周期可能会很长，你会在本地每完成一个小功能或者修改就会commit一次(方便出问题时及时回退)，你的大多数commit记录都是毫无意义的，*此时你根本不希望将这些大量的无意义的commit记录全标记到master分支上去*，最好master分支上只有一条记录，标志着我将此功能合并过来了。
 
 * (在其他分支上)      
-*不是要删除的目标分支即可*
+*如果要删除function 分支，则需要在function以外的分支上操作*
 
         删除本地分支：git branch -d branch-name
         删除远程分支：git branch -r -d origin/branch-name
