--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -35,7 +35,7 @@ git版本控制工具实用操作指令
 *具体则要注意git有没有给出conflict提示。*
 
 
-2，不管是pull还是push,都无法成功进行
+2，pull和push都无法成功进行
 --------------
 **情景二：**        
 码代码正欢时，*没有commit,直接pull代码了*
@@ -52,7 +52,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 ...
 
 
-3,代码提交后发现错误，需要紧急回退。
+3,紧急回退
 --------------
 **情形三：**        
 已经commit结束了，也push到远程了。然后发现.....这此的commit修改有严重问题，一时半会儿又找不出原因！*想要回到上一次commit的状态怎么办！*      
