--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -102,8 +102,22 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
         删除本地分支：git branch -d branch-name
         删除远程分支：git branch -r -d origin/branch-name
 
+5，commit剪切
+--------------
+**情形四：**        
+假设有一个dev分支和test分支，现在在test分支上发现并修复了一个BUG，这个BUG在dev分支上也存在。        
+由于test分支上的代码比较混乱，不能直接由dev分支直接merge test分支；但是自己的当前功能又只开发到了一半，必须修复dev分支上的BUG。这种情况下，怎么才能*只把修复BUG这个commit记录合并到dev上*呢        
+此时的解决办法为：
+* 先将正在开发的代码commit记录下来，然后开始修复BUG，修复完BUG后再commit保存。
+* 使用`git log`查看并记下最近一次commit(也就是修复BUG的commit)id
+* 使用`git checkout dev`切换到目标分支(dev)上，运行`git cherry-pick commit-id`,就可以*将指定的commit操作剪切到当前分支上来*,最后直接push就可以啦。      
 
-5，打标签 tag
+
+    
+
+
+
+6，打标签 tag
 --------------
 **首先明确一个概念:**便签(tag)是针对commit记录打的。
 就是说，打标签只是把那些（你认为）比较特别的commit记录标记出来了，并且添加了对于commit的标记，使其更利于查找。
