--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -9,6 +9,7 @@ git版本控制工具实用操作指令
 ============   
 本文为个人结合实际项目开发经验来做的git常用操作总结总结       
 如果想系统地学习git操作，请移步[Pro Git 简体中文版](http://iissnan.com/progit/)
+<div id="Mark"></div>这句话定义了锚点所指定的位置标记，名字为“Mark”.        
 
 1，最常用的操作指令：
 --------------
@@ -132,3 +133,4 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
         推送指定标签到远程：git push origin v3.0.
 
 
+[这句话是想要跳转到Mark处的锚点链接，点击即会跳转](#Mark).
