--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -5,13 +5,12 @@ categories: Blog
 description: 总结一些git的实用操作
 keywords: Blog, Git
 ---
-git版本控制工具实用操作指令
+<div id="title">git版本控制工具实用操作指令</div>
 ============   
 本文为个人结合实际项目开发经验来做的git常用操作总结总结       
-如果想系统地学习git操作，请移步[Pro Git 简体中文版](http://iissnan.com/progit/)
-<div id="Mark"></div>这句话定义了锚点所指定的位置标记，名字为“Mark”.        
+如果想系统地学习git操作，请移步[Pro Git 简体中文版](http://iissnan.com/progit/)     
 
-1，最常用的操作指令：
+1，最常用的操作指令：[↑](#title)
 --------------
 在万事俱备，git已经正常关联相关远程仓库时，
 最常用的操作指令为：
@@ -36,7 +35,7 @@ git版本控制工具实用操作指令
 *具体则要注意git有没有给出conflict提示。*
 
 
-2，pull和push都无法成功进行
+2，pull和push都无法成功进行[↑](#title)
 --------------
 **情景二：**        
 码代码正欢时，*没有commit,直接pull代码了*
@@ -53,7 +52,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 ...
 
 
-3,紧急回退
+3,紧急回退[↑](#title)
 --------------
 **情形三：**        
 已经commit结束了，也push到远程了。然后发现.....这此的commit修改有严重问题，一时半会儿又找不出原因！*想要回到上一次commit的状态怎么办！*      
@@ -69,7 +68,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
         git log --pretty=oneline --abbrev-commit   //查看版本号和commit时的注释 ）
 
 
-4，分支管理
+4，分支管理[↑](#title)
 --------------
 * （默认在master分支上）新建分支
 
@@ -103,7 +102,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
         删除本地分支：git branch -d branch-name
         删除远程分支：git branch -r -d origin/branch-name
 
-5，commit剪切
+5，commit剪切[↑](#title)
 --------------
 **情形四：**        
 假设有一个dev分支和test分支，现在在test分支上发现并修复了一个BUG，这个BUG在dev分支上也存在。        
@@ -118,7 +117,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 
 
-6，打标签 tag
+6，打标签[↑](#title)
 --------------
 **首先明确一个概念:**便签(tag)是针对commit记录打的。
 就是说，打标签只是把那些（你认为）比较特别的commit记录标记出来了，并且添加了对于commit的标记，使其更利于查找。
@@ -133,4 +132,3 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
         推送指定标签到远程：git push origin v3.0.
 
 
-[这句话是想要跳转到Mark处的锚点链接，点击即会跳转](#Mark).
