--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -46,8 +46,8 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 **解决方案：**
 
-        git stash       //将本次的修改暂时保存起来,此操作后的代码，就是你最近一次commit的代码了
-        git pull           //pull线上最新代码
+        git stash           //将本次的修改暂时保存起来,此操作后的代码，就是你最近一次commit的代码了
+        git pull            //pull线上最新代码
         git stash pop stash@{0}     //将刚刚保存起来的“修改”还原，此时有冲突就解决冲突
 ...
 
@@ -58,13 +58,13 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 已经commit结束了，也push到远程了。然后发现.....这此的commit修改有严重问题，一时半会儿又找不出原因！*想要回到上一次commit的状态怎么办！*      
 **解决方案：**
 
-        git reset --hard HEAD^   //将本地的文件回退为上一次commit时的状态
-        git push origin master -f  //将本地的代码强制push到远程。这一步需要管理员权限才能执行！~
+        git reset --hard HEAD^       //将本地的文件回退为上一次commit时的状态
+        git push origin master -f    //将本地的代码强制push到远程。这一步需要管理员权限才能执行！~
 
 **ps**：回退类似的操作还有：
 
         git reset --hard 156cd50a   //回退到指定版本，156cd50a 这个就是commit记录是生成的唯一标识了。
-        git log 查看commit详细信息，
+        git log                     //查看commit详细信息，
         git log --pretty=oneline --abbrev-commit   //查看版本号和commit时的注释 ）
 
 
@@ -90,8 +90,8 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 **这里只介绍三种方式**
 
         git merge dev       //这样合并会在master分支上保留dev分支上，从上一次合并到目前为止所有的commit记录
-        或git merge --no-ff  //快进式合并,好处就是不用add all 再commit信息了，会直接进入编辑模式添加备注，然后直接push
-        或git merge --squash dev  //压缩式合并。
+        git merge --no-ff  //快进式合并,好处就是不用add all 再commit信息了，会直接进入编辑模式添加备注，然后直接push
+        git merge --squash dev  //压缩式合并。
 ** ps**:个人最喜用的就是压缩式合并，
 好处就是在push到master分支上时，只有一条commit记录。
 因为在开发一款新产品或者新功能时， 周期可能会很长，你会在本地每完成一个小功能或者修改就会commit一次(方便出问题时及时回退)，你的大多数commit记录都是毫无意义的，*此时你根本不希望将这些大量的无意义的commit记录全标记到master分支上去*，最好master分支上只有一条记录，标志着我将此功能合并过来了。
@@ -99,8 +99,8 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 * (在其他分支上)      
 *如果要删除function 分支，则需要在function以外的分支上操作*
 
-        删除本地分支：git branch -d branch-name
-        删除远程分支：git branch -r -d origin/branch-name
+        git branch -d branch-name               //删除本地分支
+        git branch -r -d origin/branch-name     //删除远程分支：
 
 5，commit剪切[↑](#title)
 --------------
@@ -127,8 +127,10 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 其他实用操作：
 
-        查看本地的tag标签：git  tag
-        给指定commit添加标签:git tag v3.0.0  6224937
-        推送指定标签到远程：git push origin v3.0.
+        git  tag                    //查看本地的tag标签：
+        git tag v3.0.0  6224937     //给指定commit添加标签:
+        git push origin v3.0        //推送指定标签到远程：
+        git tag -d v3.0             //删除本地标签:
+        git push origin :refs/tags/v3.0.0       //删除远程标签
 
 
