--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -7,10 +7,20 @@ keywords: Blog, Git
 ---
 <div id="title">git版本控制工具实用操作指令</div>
 ============   
+<div style="background:#bdc3c7">
+
+[1，最常用操作指令](#title1)    
+[2，pull和push都无法成功进行](#title2)  
+[3，紧急回退](#title3)  
+[4，分支管理](#title4)  
+[5，commit剪切](#title5)  
+[6，打标签](#title6)    
+
+</div>
 本文为个人结合实际项目开发经验来做的git常用操作总结总结       
 如果想系统地学习git操作，请移步[Pro Git 简体中文版](http://iissnan.com/progit/)     
 
-1，最常用的操作指令：[↑](#title)
+1，<a id="title1">最常用的操作指令</a>：[↑](#title)
 --------------
 在万事俱备，git已经正常关联相关远程仓库时，
 最常用的操作指令为：
@@ -35,7 +45,7 @@ keywords: Blog, Git
 *具体则要注意git有没有给出conflict提示。*
 
 
-2，pull和push都无法成功进行[↑](#title)
+2，<a id="title2">pull和push都无法成功进行</a>[↑](#title)
 --------------
 **情景二：**        
 码代码正欢时，*没有commit,直接pull代码了*
@@ -52,7 +62,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 ...
 
 
-3,紧急回退[↑](#title)
+3,<a id="title3">紧急回退</a>[↑](#title)
 --------------
 **情形三：**        
 已经commit结束了，也push到远程了。然后发现.....这此的commit修改有严重问题，一时半会儿又找不出原因！*想要回到上一次commit的状态怎么办！*      
@@ -68,7 +78,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
         git log --pretty=oneline --abbrev-commit   //查看版本号和commit时的注释 ）
 
 
-4，分支管理[↑](#title)
+4，<a id="title4">分支管理</a>[↑](#title)
 --------------
 * （默认在master分支上）新建分支
 
@@ -102,7 +112,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
         git branch -d branch-name               //删除本地分支
         git branch -r -d origin/branch-name     //删除远程分支：
 
-5，commit剪切[↑](#title)
+5，<a id="title5">commit剪切</a>[↑](#title)
 --------------
 **情形四：**        
 假设有一个dev分支和test分支，现在在test分支上发现并修复了一个BUG，这个BUG在dev分支上也存在。        
@@ -117,7 +127,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 
 
-6，打标签[↑](#title)
+6，<a id="title6">打标签</a>[↑](#title)
 --------------
 **首先明确一个概念:**便签(tag)是针对commit记录打的。
 就是说，打标签只是把那些（你认为）比较特别的commit记录标记出来了，并且添加了对于commit的标记，使其更利于查找。
