--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -70,23 +70,23 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 4，分支管理
 --------------
-**（默认在master分支上）新建分支**
+**新建分支**
 
     查看本地分支：git branch
     新建本地分支：git branch dev   //dev为分支名
     切换到dev分支：git checkout dev
     本地新建分支并同时切换到此分支：git checkout -b dev
 
-**（在dev分支上）将新分支推送到远程**
+**将新分支推送到远程**
 
         将分支(dev)push到远程仓库，并同时建立远程分支关联：git push --set-upstream origin dev
         【远程分支关联：是如果在本地分支下操作： git pull, git push ，不需要指定在命令行指定远程的分支。】．
 
-**（在clone公共项目后，本地只有master分支时）新建并同步远程新分支**     
+**新建并同步远程新分支**     
 
         本地新建一个dev分支来同步远程dev分支：git checkout -b dev origin/dev
 
-**（在master分支上）合并分支**        
+**合并分支**        
 这里只介绍三种方式       
 
         git merge dev       //这样合并会在master分支上保留dev分支上，从上一次合并到目前为止所有的commit记录
@@ -117,7 +117,7 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 
 
-6，<a id="title6">打标签</a>[↑](#title)
+6，打标签
 --------------
 **首先明确一个概念:**便签(tag)是针对commit记录打的。
 就是说，打标签只是把那些（你认为）比较特别的commit记录标记出来了，并且添加了对于commit的标记，使其更利于查找。
