--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -20,52 +20,41 @@ git版本控制工具实用操作指令
         git pull
         git push
 
-*请注意，是先commit,再pull。*
-当然你也可以先pull,不过那样的话，有时候Git会莫名其妙的进入编辑模式
-（git bash操作界面突然大变样，怎么全是蓝色的字和英文，甚至还有乱码...我的操作栏呢？喵喵喵？？？）
+*请注意，是先commit,再pull。否则有可能强制进入编辑模式*      
 
-**备注**：
-如果由于各种原因进入了“编辑模式”，想要退出此模式的操作步骤为：
-
-* 1,按下esc键 . （esc的目的是退出编辑模式）
-* 2,按两个大写的z(可以按CapsLk，再按两个ZZ或者直接shfit+ZZ)
-*这样就可以退出编辑模式啦*
-**ps：**退出编辑模式本身不会造成任何额外影响，但是git会在恢复之前的操作时对代码造成影响
-比如你之前在Pull代码，突然进入编辑模式了。在退出编辑模式之后，就会默认强制pull，本地与远程分支的代码在这种情况下，是有可能在部分文件内发生冲突的
-*具体则要注意git有没有给出conflict提示。*
+**退出编辑模式**：
+操作步骤：
+* 1,按下esc键 . （退出编辑状态）
+* 2,按两个大写的z(可以按CapsLock，再按两个ZZ或者直接shfit+ZZ)
 
 
-2，pull和push都无法成功进行
+
+2，暂存当前的修改
 --------------
-**情景二：**        
-码代码正欢时，*没有commit,直接pull代码了*
-git提示文件冲突，然后你就会发现一件非常可怕的事：
+**在commit之前：**
 
-* 既不能pull，也不能再commit之后再push或者pull，连冲突文件都没有！连解决conflict的机会都不给我！！
-只有git面无表情的提示：因为冲突，所以这也不能，那也不能......这个情况憋死了多少刚接触git不久的骚年有木有~~    
+        git stash           //将本次的修改暂时保存起来
+        git stash pop stash@{0}     //将刚刚保存起来的“修改”还原
+        git stash list       //查看本地的stash列表
+        
+**修改commit记录**
 
-**解决方案：**
+        git add .               //提交本次修改
+        git commit --amend      //将本次修改并入上次commit，随后进入编辑模式
+        git push
 
-        git stash           //将本次的修改暂时保存起来,此操作后的代码，就是你最近一次commit的代码了
-        git pull            //pull线上最新代码
-        git stash pop stash@{0}     //将刚刚保存起来的“修改”还原，此时有冲突就解决冲突
-...
-
-
-3,紧急回退
---------------
-**情形三：**        
-已经commit结束了，也push到远程了。然后发现.....这此的commit修改有严重问题，一时半会儿又找不出原因！*想要回到上一次commit的状态怎么办！*      
-**解决方案：**
+3,版本回退
+--------------            
+**紧急回退到上一次的commit状态：**
 
         git reset --hard HEAD^       //将本地的文件回退为上一次commit时的状态
-        git push origin master -f    //将本地的代码强制push到远程。这一步需要管理员权限才能执行！~
+        git push origin master -f    //将本地的代码强制推送到远程。这一步需要管理员权限才能执行！~
 
-**ps**：回退类似的操作还有：
+**回退到指定版本**     
 
-        git reset --hard 156cd50a   //回退到指定版本，156cd50a 这个就是commit记录是生成的唯一标识了。
-        git log                     //查看commit详细信息，
-        git log --pretty=oneline --abbrev-commit   //查看版本号和commit时的注释 ）
+        git reset --hard 156cd50a   //回退到指定版本，156cd50a 为commit记录的唯一标识。
+        git log                     //查看本地commit历史，
+        git log --pretty=oneline --abbrev-commit   //查看本地commit历史（简）
 
 
 4，分支管理
@@ -79,53 +68,46 @@ git提示文件冲突，然后你就会发现一件非常可怕的事：
 
 **将新分支推送到远程**
 
-        将分支(dev)push到远程仓库，并同时建立远程分支关联：git push --set-upstream origin dev
+        git push --set-upstream origin dev   //将分支(dev)push到远程仓库，并同时建立远程分支关联：
         【远程分支关联：是如果在本地分支下操作： git pull, git push ，不需要指定在命令行指定远程的分支。】．
 
 **新建并同步远程新分支**     
 
-        本地新建一个dev分支来同步远程dev分支：git checkout -b dev origin/dev
+        git checkout -b dev origin/dev      //本地新建一个dev分支来同步远程dev分支：
 
 **合并分支**        
 这里只介绍三种方式       
 
-        git merge dev       //这样合并会在master分支上保留dev分支上，从上一次合并到目前为止所有的commit记录
-        git merge --no-ff  //快进式合并,好处就是不用add all 再commit信息了，会直接进入编辑模式添加备注，然后直接push
+        git merge dev       //正常合并
+        git merge --no-ff  //快进式合并
         git merge --squash dev  //压缩式合并。
-** ps**:个人最喜用的就是压缩式合并，
-好处就是在push到master分支上时，只有一条commit记录。
-因为在开发一款新产品或者新功能时， 周期可能会很长，你会在本地每完成一个小功能或者修改就会commit一次(方便出问题时及时回退)，你的大多数commit记录都是毫无意义的，*此时你根本不希望将这些大量的无意义的commit记录全标记到master分支上去*，最好master分支上只有一条记录，标志着我将此功能合并过来了。
+        
+**压缩式合并** ：合并后，只会生成一条commit记录。
 
-* (在其他分支上)      
+**删除分支**        
 *如果要删除function 分支，则需要在function以外的分支上操作*
 
         git branch -d branch-name               //删除本地分支
         git branch -r -d origin/branch-name     //删除远程分支：
 
-5，commit剪切
+
+5，commit复制
 --------------
-**情形四：**        
-假设有一个dev分支和test分支，现在在test分支上发现并修复了一个BUG，这个BUG在dev分支上也存在。        
-由于test分支上的代码比较混乱，不能直接由dev分支直接merge test分支；但是自己的当前功能又只开发到了一半，必须修复dev分支上的BUG。这种情况下，怎么才能*只把修复BUG这个commit记录合并到dev上*呢        
-此时的解决办法为：
-* 先将正在开发的代码commit记录下来，然后开始修复BUG，修复完BUG后再commit保存。
-* 使用`git log`查看并记下最近一次commit(也就是修复BUG的commit)id
-* 使用`git checkout dev`切换到目标分支(dev)上，运行`git cherry-pick commit-id`,就可以*将指定的commit操作剪切到当前分支上来*,最后直接push就可以啦。      
-
-
-    
-
-
+**将某次commit提交所做的修改复制到当前分支**     
+        
+        git log         //查看目标commit的唯一ID
+        git cherry-pick commit-id`     //将指定commit提交复制到当前分支
+        git push
+   
 
 6，打标签
 --------------
-**首先明确一个概念:**便签(tag)是针对commit记录打的。
-就是说，打标签只是把那些（你认为）比较特别的commit记录标记出来了，并且添加了对于commit的标记，使其更利于查找。
+**便签是针对commit记录所做的操作**
 
         git tag -a v3.0.0 -m "Release version 0.1.3"    //对最近一次的commit新加标签：
         git push origin --tags     //将本地的所有标签提交到远程
 
-其他实用操作：
+**其他操作**
 
         git  tag                    //查看本地的tag标签：
         git tag v3.0.0  6224937     //给指定commit添加标签:
