--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -43,7 +43,7 @@ git版本控制工具实用操作指令
         git commit --amend      //将本次修改并入上次commit，随后进入编辑模式
         git push
 
-3,版本回退
+3，版本回退
 --------------            
 **紧急回退到上一次的commit状态：**
 
