--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -23,13 +23,12 @@ git版本控制工具实用操作指令
 *请注意，是先commit,再pull。否则有可能强制进入编辑模式*      
 
 **退出编辑模式**：
-操作步骤：
 * 1,按下esc键 . （退出编辑状态）
 * 2,按两个大写的z(可以按CapsLock，再按两个ZZ或者直接shfit+ZZ)
 
 
 
-2，暂存当前的修改
+2，暂存修改
 --------------
 **在commit之前：**
 
@@ -82,7 +81,7 @@ git版本控制工具实用操作指令
         git merge --no-ff  //快进式合并
         git merge --squash dev  //压缩式合并。
         
-**压缩式合并** ：合并后，只会生成一条commit记录。
+压缩式合并 ：合并后，只会生成一条commit记录。
 
 **删除分支**        
 *如果要删除function 分支，则需要在function以外的分支上操作*
