--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -111,7 +111,7 @@ git版本控制工具实用操作指令
         git  tag                    //查看本地的tag标签：
         git tag v3.0.0  6224937     //给指定commit添加标签:
         git push origin v3.0        //推送指定标签到远程：
-        git tag -d v3.0             //删除本地标签:
+        git tag -d v3.0             //删除指定标签:
         git push origin :refs/tags/v3.0.0       //删除远程标签
 
 
