--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -67,8 +67,9 @@ git版本控制工具实用操作指令
 
 **将新分支推送到远程**
 
-        git push --set-upstream origin dev   //将分支(dev)push到远程仓库，并同时建立远程分支关联：
-        【远程分支关联：是如果在本地分支下操作： git pull, git push ，不需要指定在命令行指定远程的分支。】．
+        git push --set-upstream origin dev   //将分支(dev)push到远程仓库，并同时建立远程分支关联
+        
+远程分支关联：在此分支下 git pull, git push ，不需要指定在命令行指定远程的分支。．
 
 **新建并同步远程新分支**     
 
