--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -26,9 +26,15 @@ git版本控制工具实用操作指令
 * 1,按下esc键 . （退出编辑状态）
 * 2,按两个大写的z(可以按CapsLock，再按两个ZZ或者直接shfit+ZZ)
 
+2，前期设置
+------
+**保存个人身份信息，避免重复输入账号密码**       
 
+    git config --global user.email "gaofangshang@163.com"
+    git config --global user.name "Mr.Gao"
+    git config --global credential.helper store
 
-2，暂存修改
+3，暂存修改
 --------------
 **在commit之前：**
 
@@ -42,7 +48,7 @@ git版本控制工具实用操作指令
         git commit --amend      //将本次修改并入上次commit，随后进入编辑模式
         git push
 
-3，版本回退
+4，版本回退
 --------------            
 **紧急回退到上一次的commit状态：**
 
@@ -56,7 +62,7 @@ git版本控制工具实用操作指令
         git log --pretty=oneline --abbrev-commit   //查看本地commit历史（简）
 
 
-4，分支管理
+5，分支管理
 --------------
 **新建分支**
 
@@ -91,7 +97,7 @@ git版本控制工具实用操作指令
         git branch -r -d origin/branch-name     //删除远程分支：
 
 
-5，commit复制
+6，commit复制
 --------------
 **将某次commit提交所做的修改复制到当前分支**     
         
@@ -100,7 +106,7 @@ git版本控制工具实用操作指令
         git push
    
 
-6，打标签
+7，打标签
 --------------
 **便签是针对commit记录所做的操作**
 
