--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -10,7 +10,7 @@ git版本控制工具实用操作指令
 本文为个人结合实际项目开发经验来做的git常用操作总结总结       
 如果想系统地学习git操作，请移步[Pro Git 简体中文版](http://iissnan.com/progit/)     
 
-1，最常用的操作指令：
+1，最常用的操作指令
 --------------
 在万事俱备，git已经正常关联相关远程仓库时，
 最常用的操作指令为：
