--- a/_posts/git/2018-06-04-git常用操作.md
+++ b/_posts/git/2018-06-04-git常用操作.md
@@ -49,7 +49,14 @@ git版本控制工具实用操作指令
         git push
 
 4，版本回退
---------------            
+--------------    
+**查看commit记录**      
+
+    git log --pretty=oneline --abbrev-commit
+    git log --pretty=oneline
+    git log 
+    git log -p
+        
 **紧急回退到上一次的commit状态：**
 
         git reset --hard HEAD^       //将本地的文件回退为上一次commit时的状态
