--- a/_posts/blog/2018-07-11-set-env.md
+++ b/_posts/blog/2018-07-11-set-env.md
@@ -12,12 +12,12 @@ keywords: Blog, Person
 ----
 下载webstorm并安装后      
 * 忽略node_modules        
-![](img/node_modules.igonre.jpg '全局忽略node_modules文件夹')
+![](../../images/blog/node_modules.igonre.jpg '全局忽略node_modules文件夹')
 * 设置ES6语法环境     
-![](img/language.jpg )
+![](../../images/blog/language.jpg )
 * 若初始化时没有安装markdown插件，事后想要安装        
-![](img/markdown1.jpg)
-![](img/markdown2.jpg)
+![](../../images/blog/markdown1.jpg)
+![](../../images/blog/markdown2.jpg)
 
 
 1，node环境安装
