--- a/_posts/ES6/2018-06-15-Module.md
+++ b/_posts/ES6/2018-06-15-Module.md
@@ -21,10 +21,12 @@ keywords: ES6,
     saveLocationInfo().call(this)
     
 此种情况下调用函数，this的指向并不是Vue实例。      
+
 **解决的方式为：**     
 storage.js中改变定义方式
 
     export function saveLocationInfo(){
         console.log(this,"this指向谁？")
-    }
-这样定义call就能正确地改变原函数的this指向了
+    }       
+    
+这样定义call就能正确地改变原函数的this指向了,原因为 ： **箭头函数的this指向不会改变，在函数体内整个执行环境中为常量。**
