--- a/_posts/blog/2018-07-11-set-env.md
+++ b/_posts/blog/2018-07-11-set-env.md
@@ -2,12 +2,9 @@
 layout: post
 title: 新电脑工作环境安装
 categories: Blog
-description: 新入职总是要忙着给电脑下载各种软件，配置各种环境。今天将所需要配置的环境认真记录下来，日后遇到相同的情况可以作为参考。      
-keywords: Blog, Person
+description: 面对一台新电脑总是要忙着给电脑下载各种软件，配置各种环境。今天将所需要配置的环境认真记录下来，日后遇到相同的情况可以作为参考。      
+keywords: Blog, computed
 ---
-
-新电脑工作环境安装
-====
 
 0,webstorm的安装设置
 ----
