--- a/_posts/blog/2018-07-25-date.md
+++ b/_posts/blog/2018-07-25-date.md
@@ -22,8 +22,7 @@ keywords: Blog, date
 ps :   
 日期形式：Wed Jul 25 2018 15:41:06 GMT+0800 (中国标准时间)；    
 时间戳形式：1532505277989         
-其他方法见 ：<a href="http://www.w3school.com.cn/jsref/jsref_obj_date.asp" target="_blank">W3Cschool JavaScript Date 对象]</a>
-
+其他方法见 ：[W3Cschool JavaScript Date 对象]( http://www.w3school.com.cn/jsref/jsref_obj_date.asp)
 
 2,设置时间
 ----      
