--- a/_posts/blog/2018-07-25-date.md
+++ b/_posts/blog/2018-07-25-date.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: date实用方法小结
+title: 日期时间对象Date对象，常用方法小结
 categories: Blog
 description: 总结一下日期时间的常用处理方式和方法
 keywords: Blog, date
@@ -76,4 +76,7 @@ ps :
 
 4，其他
 ----
-如果是前后台交互时传递时间，使用**时间戳**比较方便。
+如果是前后台交互时传递时间，使用**时间戳**比较方便。    
+
+附上一份自己最近写的一份小小的[日期时间插件](https://www.npmjs.com/settings/gaofangshang9868/packages);
+使用npm可以是直接安装使用，并且支持script引入。
