--- a/_posts/blog/2018-07-25-date.md
+++ b/_posts/blog/2018-07-25-date.md
@@ -79,4 +79,4 @@ ps :
 如果是前后台交互时传递时间，使用**时间戳**比较方便。    
 
 附上一份自己最近写的一份小小的[日期时间插件](https://www.npmjs.com/settings/gaofangshang9868/packages);
-使用npm可以是直接安装使用，并且支持script引入。
+----支持npm安装，也支持script引入。
