删除多余文章

--- a/_posts/blog/2018-06-15-微信端开发.md
+++ b/_posts/blog/2018-06-15-微信端开发.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 微信端开发常见问题
-categories: wechart
+categories: blog
 description: 总结一些微信端开发遇到过的常见问题
 keywords: Wechart,H5 
 ---
