--- a/_posts/blog/2018-07-11-set-env.md
+++ b/_posts/blog/2018-07-11-set-env.md
@@ -41,11 +41,13 @@ keywords: Blog, computed
 
 创建一个新工程，并选择(手动选择特性)"选项      
 `vue create my-project-name`     
-
-以上是最新的vue-cli快速搭建方式，原来的方式为：    
+或：    
 `npm install vue-cli -g`    
 `vue init webpack demo-name`
 
+
+安装nuxt:     
+`vue init nuxt-community/starter-template <project-name>`
 
 3,git安装
 ----
