--- a/_posts/blog/2019-03-06-json-tool.md
+++ b/_posts/blog/2019-03-06-json-tool.md
@@ -7,9 +7,10 @@ keywords: data,node
 ---
 
 在工作的过程中时不时会遇到这样的痛苦：
-想要查看一段json格式是否是自己想要的，必须在chrome控制台上console出来，然后层层点开查看；
-想要将一段自己转化后的json复制出来，另作他用，却发现chrome控制台上console出来的json对象，复制出来总是缺逗号和括号;
-有时候甚至直接就想把后端返回的某个大的json保存起来。
+
+* 想要查看一段json的内容，必须在chrome控制台上console出来，然后层层点开查看；
+* 想要将一段json复制出来，却发现chrome控制台上console出来的json对象，复制出来总是缺逗号和括号;
+* 有时候甚至直接就想把某个大的json保存起来。
 
 一点点小操作，可以让工作更加舒心。
 
