--- a/_posts/git/2018-11-23-centos7-git.md
+++ b/_posts/git/2018-11-23-centos7-git.md
@@ -86,7 +86,7 @@ ps：有的文章介绍只需要执行`useradd -m -d /home/git -s /usr/bin/git-s
     $ cd gitrepo
 
     # 创建一个空的Git仓库，服务器上的Git仓库通常都以.git结尾
-    $ git init --bare project.git   
+    $ git init --bare project.git   // 文件夹名.git都可以
     # 最后clone时，会拿到一个名为project的文件夹
 
     # 将仓库所属用户改为git
